# bookstore

./: .gitignore  Dockerfile  Procfile  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
accounts/: admin.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
books/: admin.py  models.py  tests.py  views.py
books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_alter_book_options.py  0005_book_id_index.py
django_project/: settings.py  urls.py
pages/: tests.py
templates/: _base.html  home.html
templates/account/: email_confirm.html  login.html  logout.html
templates/account/email/: email_confirmation_message.txt
templates/books/: book_detail.html  search_results.html
templates/registration/: signup.html
